--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@angular-devkit/schematics": "^18.2.2",
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
+    "@eslint/js": "^9.8.0",
     "@nx/angular": "20.4.0",
+    "@nx/eslint": "20.4.0",
+    "@nx/eslint-plugin": "20.4.0",
     "@nx/js": "20.4.0",
     "@nx/workspace": "20.4.0",
     "@schematics/angular": "^18.2.2",
@@ -38,6 +41,10 @@
     "@swc/helpers": "~0.5.11",
     "@types/jasmine": "~5.1.0",
     "@types/luxon": "^3.4.2",
+    "@typescript-eslint/utils": "^8.19.0",
+    "angular-eslint": "^18.3.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.0.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -47,6 +54,7 @@
     "luxon": "^3.5.0",
     "nx": "20.4.0",
     "prettier": "^2.6.2",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "typescript-eslint": "^8.19.0"
   }
 }
