--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,11 +17,10 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ],
-    "paths": {},
+    "lib": ["ES2022", "dom"],
+    "paths": {
+      "@tt/auth": ["libs/auth/src/index.ts"]
+    },
     "baseUrl": ".",
     "rootDir": "."
   },
@@ -31,8 +30,5 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
