--- a/nx.json
+++ b/nx.json
@@ -38,10 +38,13 @@
       "linter": "eslint",
       "unitTestRunner": "none",
       "prefix": "tt",
-      "style": "scss"
+      "style": "scss",
+      "skipTests": true
     },
     "@nx/angular:component": {
       "style": "scss",
+      "skipTests": true,
+      "changeDetection": "OnPush",
       "standalone": true
     }
   }
